# ai-proxy2

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  INSPECTION_REMEDIATION_PLAN.md  Makefile  PLAN.md  README.md  TZ.md  config.secrets.example.yml  config.yml  docker-compose.dev.yml  docker-compose.yml  tz.md
.githooks/: pre-commit
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/ai_proxy/: app.py  types.py
backend/ai_proxy/adapters/: base.py  openai_compat.py  registry.py
backend/ai_proxy/api/: deps.py
backend/ai_proxy/api/proxy/: response_utils.py  router.py  streaming.py
backend/ai_proxy/api/ui/: chats.py  export.py  models.py  requests.py
backend/ai_proxy/config/: loader.py  settings.py  validate.py  watcher.py
backend/ai_proxy/core/: access.py  key_resolution.py  model_mappings.py  modification.py  rate_limiter.py  routing.py
backend/ai_proxy/db/: engine.py  models.py
backend/ai_proxy/db/repositories/: chats.py  requests.py
backend/ai_proxy/logging/: masking.py  models.py  service.py
backend/ai_proxy/security/: auth.py
backend/ai_proxy/services/: __init__.py  model_catalog.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_client_request_response_body.py  0003_add_client_request_response_headers.py  0004_add_conversation_group_columns.py  0005_add_first_assistant_response_column.py
backend/tests/: conftest.py
backend/tests/unit/: test_adapters_and_streaming.py  test_app.py  test_bypass_and_key_mapping.py  test_chat_repository_messages.py  test_config_watcher.py  test_coverage_boost.py  test_coverage_boost_chats.py  test_e2e_bypass_key_mapping.py  test_google_openai_compat.py  test_health.py  test_model_catalog.py  test_provider_aware_routing.py  test_provider_pinning.py  test_proxy_router.py  test_rate_limiter.py  test_request_repository.py  test_router_and_service_paths.py  test_stream_delta_merge.py  test_support_modules.py  test_ui_health.py  test_ui_repositories_and_logging.py  test_ui_request_costs.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/app/: ChatWorkspace.tsx  ConnectedApp.tsx  ModelsWorkspace.tsx  RequestsWorkspace.tsx  modelsUtils.ts  navigation.ts  useNavigationState.ts
frontend/src/hooks/: autoRefreshContext.ts  useApi.ts  useAutoRefresh.tsx
frontend/src/types/: index.ts
frontend/src/utils/: cacheBoundary.ts
frontend/tests/unit/: App.test.ts  App.test.tsx  app-shell.test.tsx  auth-and-browser.test.tsx  auto-refresh.test.tsx  cache-boundary.test.ts  client-extra.test.ts  client.test.ts  coverage-boost.test.tsx  detail-and-chat.helpers.tsx  detail-and-chat.test.tsx  models-workspace.test.tsx  navigation-and-hooks.test.tsx  (+1 more)
scripts/: check_code_limits.py
(+15 files in other folders)
